# pulsecity

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
db/migrations/: 001_create_games.sql  002_add_game_setup_fields.sql  003_add_city_management_mode.sql  004_add_owner_intro_event.sql  005_add_owner_intro_response.sql  006_add_guest_sessions.sql  007_add_users_and_sessions.sql  008_add_games_owner_constraint.sql  009_create_agent_simulation_state.sql  010_create_team_season_tables.sql  011_create_city_metrics_tables.sql  012_create_agent_core_state_tables.sql  013_create_narrative_events_tables.sql  014_create_analytics_timeseries_tables.sql  015_create_agent_individual_states.sql  016_create_agent_player_states.sql  017_create_agent_relationships.sql  018_create_gm_decisions_log.sql  019_create_agent_chat_history.sql  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  (+3 more)
services/agent-service/: Cargo.toml
services/agent-service/src/: agents.rs  events.rs  lib.rs  main.rs  persistence.rs  runtime.rs  simulation.rs
services/agent-service/src/agents/: catalog.rs  match_reactions.rs  medical_reactions.rs  salary_cap_reactions.rs  trade_reactions.rs
services/map-service/: Cargo.toml
services/map-service/src/: events.rs  main.rs
services/match-service/: Cargo.toml
services/match-service/src/: events.rs  lib.rs  main.rs  runtime.rs  simulator.rs
(+256 files in other folders)
